<resources>
    <string name="app_name">OfficeSpace</string>
    <string name="enter_your_id">Enter your ID</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Not Registered? Create an account</string>
    <string name="applications_menubar">Applications</string>
    <string name="type_menubar">Type</string>
    <string name="m3s_menubar">M3S</string>
    <string name="amos_menubar">AMOS</string>
    <string name="basic_menubar">BASIC</string>
    <string name="silver_menubar">SILVER</string>
    <string name="gold_menubar">GOLD</string>
    <string name="platinum_menubar">PLATINUM</string>
    <string name="select_an_application">Select an application</string>
    <string name="showing_types_as">Versions available </string>
    <string name="add_icon">Add icon</string>
    <string name="set_range">Set Range</string>
    <string name="license_validity">License validity</string>
    <string name="employee_detail">Employee Details</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_contact">Employee Contact</string>
    <string name="company_details">Company Details</string>
    <string name="license_type">License Type</string>
    <string name="project_name">Project Name</string>
    <string name="company_name">Company Name</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="company_location">Company Location</string>
    <string name="no_of_licenses">No. of Licenses</string>
    <string name="generate_license_xml">Generate License XML</string>
    <string name="range">Range</string>
    <string name="proceed_textView">Proceed</string>
    <string name="next">NEXT</string>
    <string name="license_generated_successfully">License Generated Successfully</string>
    <string name="generate_new_license">Generate new License</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="application_list">
        <item>M3S</item>
        <item>AMOS</item>
    </string-array>

    <string-array name="type_list">
        <item>BASIC</item>
        <item>SILVER</item>
        <item>GOLD</item>
        <item>PLATINUM</item>
    </string-array>

    <string-array name="action_list">
        <item>ENABLE</item>
        <item>HIDE</item>
        <item>DISABLE</item>
    </string-array>

    <style name="MyTabStyle">
        <item name="android:actionBarTabTextStyle">@style/MyTabTextStyle</item>
    </style>

    <style name="MyTabTextStyle" parent="@android:style/Widget.ActionBar.TabText">
        <item name="android:textAppearance">@android:style/TextAppearance.Medium</item>
        <item name="android:textSize">14sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textColor">#336792</item>
    </style>
</resources>
