<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/AppTheme"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/employee_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="vertical">
        <EditText
            android:id="@+id/employee_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="12dp"
            android:hint="@string/employee_name"/>
        <EditText
            android:id="@+id/employee_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="12dp"
            android:hint="@string/employee_id"/>
        <EditText
            android:id="@+id/employee_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="12dp"
            android:hint="@string/employee_contact"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/company_details"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/license_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:inputType="text"
                android:hint="@string/license_type"/>
            <EditText
                android:id="@+id/project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12dp"
                android:hint="@string/project_name"/>
            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12dp"
                android:hint="@string/company_name"/>
            <EditText
                android:id="@+id/contact_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="12dp"
                android:hint="@string/contact_person_name"/>
            <EditText
                android:id="@+id/contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="12dp"
                android:hint="@string/contact_number"/>
            <EditText
                android:id="@+id/company_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12dp"
                android:hint="@string/company_location"/>
            <EditText
                android:id="@+id/number_of_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/statusBarColor"
                android:textSize="12dp"
                android:inputType="number"
                android:hint="@string/no_of_licenses"/>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/generate_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="generateLicenseXML"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/generate_license_xml"
            android:textColor="@color/statusBarColor"
            android:textAlignment="center"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>