<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5EFF7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/new_doc_img" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/license_generated_successfully"
            android:textAlignment="center"
            android:textColor="#242424"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/statusBarColor"
                android:fontFamily="monospace"
                android:onClick="LoginIntoAccount"
                android:layout_marginBottom="2dp"
                android:text="@string/generate_new_license"
                android:textColor="#add8e6" />

            <Button
                android:id="@+id/button2"
                android:layout_marginTop="2dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/statusBarColor"
                android:fontFamily="monospace"
                android:onClick="SignOut"
                android:text="@string/sign_out"
                android:textColor="#add8e6" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>