<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Info"
                android:textAlignment="textEnd"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="tel"
                android:textAlignment="textStart"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/id"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/PASSWORD"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Heading" />

            <EditText
                android:id="@+id/PASSWORD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ID" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="26dp"
                android:layout_gravity="center"
                android:onClick="LoginIntoAccount"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:background="@color/statusBarColor"
                app:layout_constraintBottom_toBottomOf="@+id/Signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PASSWORD"
                app:layout_constraintVertical_bias="0.5" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="20dp"/>
</android.support.constraint.ConstraintLayout>