<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:context=".FeaturesDisplayActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/L1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#336E7B"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/application_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="false"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="M3S"
                android:textAlignment="viewStart"
                android:textColor="#ffffff"
                android:textSize="35sp" />

            <LinearLayout android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:orientation="vertical">

                <TextView android:id="@+id/License_validity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_validity"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="random"
                    android:textColor="#add8e6"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/L2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/type_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:text="@string/showing_types_as"
                    android:textAlignment="center"
                    tools:ignore="NestedWeights" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:entries="@array/type_list"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="84dp" />

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingBottom="56dp"
                android:orientation="vertical"
                android:scrollbars="vertical"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="NotSibling" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/range"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="-56dp"
            android:background="#336E7B"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="#add8e6"
                android:textAlignment="center"
                android:onClick="ProceedToNextStep"
                android:textSize="18sp"
                android:text="@string/proceed_textView" />
        </LinearLayout>
    </LinearLayout>
    
</android.support.constraint.ConstraintLayout>